Fix kubernetes example

--- a/kubernetes/examples/helm.yml
+++ b/kubernetes/examples/helm.yml
@@ -1,7 +1,6 @@
 ---
 - hosts: k8s-master
   become: yes
-
   tasks:
     - name: Retrieve helm binary archive.
       unarchive:
@@ -16,12 +15,25 @@
         creates: /usr/local/bin/helm
 
     - name: Add Bitnami's chart repository.
-      community.kubernetes.helm_repository:
+      kubernetes.core.helm_repository:
         name: bitnami
         repo_url: "https://charts.bitnami.com/bitnami"
 
+- hosts: k8s-master
+  become: yes
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
+  tasks:
+    - name: Ensure K8s module dependencies are installed.
+      package:
+        name: python3-pip
+        state: present"
+    - name: Ensure K8s module dependencies are installed.
+      pip:
+        name: pyyaml
+        state: present
     - name: Install phpMyAdmin with Helm.
-      community.kubernetes.helm:
+      kubernetes.core.helm:
         name: phpmyadmin
         chart_ref: bitnami/phpmyadmin
         release_namespace: default
@@ -29,13 +41,16 @@
           service:
             type: NodePort
 
+- hosts: k8s-master
+  become: yes
+  tasks:
     - name: Ensure K8s module dependencies are installed.
       pip:
         name: openshift
         state: present
 
     - name: Get the details of the phpmyadmin Service.
-      community.kubernetes.k8s:
+      kubernetes.core.k8s:
         api_version: v1
         kind: Service
         name: phpmyadmin
