--- a/kubernetes/ansible.cfg
+++ b/kubernetes/ansible.cfg
@@ -1,10 +1,10 @@
 [defaults]
 host_key_checking = False
-roles_path = ./roles
+roles_path = ./roles:/etc/ansible/roles
 nocows = 1
 retry_files_enabled = False
 force_valid_group_names = ignore
 
-[ssh_connection]
+[connection]
 control_path = %(directory)s/%%h-%%p-%%r
 pipelining = True
