--- a/kubernetes/examples/helm-cleanup.yml
+++ b/kubernetes/examples/helm-cleanup.yml
@@ -1,7 +1,8 @@
 ---
 - hosts: k8s-master
   become: yes
-
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
   tasks:
     - name: Remove phpMyAdmin with Helm.
       community.kubernetes.helm:
